Added code for assignment

--- a/public/scissors.html
+++ b/public/scissors.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-  <title>You played rock!</title>
+  <title>You played scissors!</title>
 
   <meta charset="utf-8">
 </head>
-
 <body class="vsc-initialized">
   <div>
     <a href="/rock">
@@ -25,16 +24,12 @@
     </a>
   </div>
 
-  <h2>
-    We played rock!
-  </h2>
+</div>
 
-  <h2>
-    They played paper!
-  </h2>
+<h2>We played scissors!</h2>
+<h2>They played paper</h2>
+<h2>We won!</h2>
 
-  <h2>
-    We lost!
-  </h2>
-
-  <a href="/"> Rules</a>
+<div>
+  <a href="/"> Rules </a>
+</div>
