--- a/public/paper.html
+++ b/public/paper.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-  <title>You played rock!</title>
+  <title>You played paper!</title>
 
   <meta charset="utf-8">
 </head>
-
 <body class="vsc-initialized">
   <div>
     <a href="/rock">
@@ -24,17 +23,13 @@
       Play Scissors
     </a>
   </div>
+<h2>We played paper!</h2>
 
-  <h2>
-    We played rock!
-  </h2>
+<h2>They played paper!</h2>
 
-  <h2>
-    They played paper!
-  </h2>
+<h2>We tied!</h2>
 
-  <h2>
-    We lost!
-  </h2>
-
-  <a href="/"> Rules</a>
+<div>
+  <a href="/">Rules
+</div>
+</Body>
